login form and signup link

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,4 +4,4 @@ title = 'Smarter Guardians'
 
 [params]
     loginLink = "/login"
-    signupLink = "/signup"
+    signupLink = "https://account.smarterguardians.com"
